apps/kubernetes/k3s/apps/ezbookkeeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ezbookkeeping
  namespace: ezbookkeeping
spec:
  selector:
    app: ezbookkeeping
  ports:
    - name: http
      port: 8080
      targetPort: 8080
