apps/kubernetes/k3s/apps/ezbookkeeping/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ezbookkeeping
  namespace: ezbookkeeping
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bookkeeping.hughboi.cc`)
      kind: Rule
      services:
        - name: ezbookkeeping
          port: 8080
  tls:
    secretName: hughboi-tls
